# cef-rs-sample

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
crates/bundle-macos/: Cargo.toml
crates/bundle-macos/src/: main.rs
crates/cef-rs-osr-sample/: Cargo.toml
crates/cef-rs-osr-sample/src/: app.rs  browser.rs  browser_process_handler.rs  client.rs  main.rs  original_window.rs  window.rs
crates/cef-rs-osr-sample/src/cef_impl/: app.rs  browser_process_handler.rs  mod.rs  render_handler.rs
crates/cef-rs-osr-sample/src/platform_impl/: macos.rs
crates/cef-rs-sample/: Cargo.toml
crates/cef-rs-sample-bundle-macos/: Cargo.toml
crates/cef-rs-sample-bundle-macos/src/: main.rs
crates/cef-rs-sample-helper/: Cargo.toml
crates/cef-rs-sample-helper/src/: main.rs
crates/cef-rs-sample/src/: main.rs
crates/chrome/: Cargo.toml
crates/chrome-helper/: Cargo.toml
crates/chrome-helper/src/: main.rs
crates/chrome/src/: app.rs  browser_process_handler.rs  client.rs  main.rs  original_window.rs  render_handler.rs  request_context_handler.rs
crates/mini-browser/: Cargo.toml  mini-browser.exe.manifest
crates/mini-browser/src/: app.rs  browser.rs  commands.rs  index.html  main.js  main.rs  ui.rs
crates/mini-browser/src/cef_impl/: app.rs  browser_process_handler.rs  client.rs  context_menu_handler.rs  life_span_handler.rs  mod.rs  request_context_handler.rs
crates/mini-browser/src/platform_impl/: macos.rs  mod.rs  windows.rs
