[workspace]
members = [
    "crates/cef-rs-osr-sample",
    "crates/cef-rs-sample",
    "crates/cef-rs-sample-bundle-macos",
    "crates/cef-rs-sample-helper",
    "crates/mini-browser",
]
resolver = "3"

[workspace.dependencies]
cef = "141.6.0"
winit = "0.30.12"
objc2 = "0.6.1"
objc2-app-kit = { version = "0.3.1", default-features = false }
