[package]
name = "cef-rs-osr-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
cef = { workspace = true }
winit.workspace = true
softbuffer = "0.4.6" # for osr

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit = { workspace = true, features = ["NSResponder", "NSApplication"] }
