[package]
name = "mini-browser"
version = "0.1.0"
edition = "2024"

[dependencies]
cef = { workspace = true }
winit = "0.30.12"
wry = "0.52.1"
wry_cmd = "0.1.3"
serde = "1.0.219"
serde_json = "1.0.142"
anyhow = "1.0.98"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-app-kit = { version = "0.3.1", features = ["NSResponder", "NSView"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.2.32"
