[package]
name = "mini-browser"
version = "0.1.0"
edition = "2024"

[dependencies]
cef = { workspace = true }
winit.workspace = true
wry = "0.53.5"
wry_cmd = "0.1.3"
serde = "1.0.228"
serde_json = "1.0.145"
anyhow = "1.0.100"

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit = { workspace = true, features = ["NSResponder", "NSView"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.2.32"
